--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <nav class="site-nav">
           <a href="./index.html" class="company-logo">Web<span>Studio</span></a>
           <ul class="header-nav">
-            <li><a class="header-nav-li" href="./index.html">Studio</a></li>
+            <li>
+              <a class="header-nav-li current" href="./index.html">Studio</a>
+            </li>
             <li><a class="header-nav-li" href="">Portfolio</a></li>
             <li><a class="header-nav-li" href="">Contacts</a></li>
           </ul>
@@ -71,6 +73,16 @@
           <h2 class="visually-hidden">Global Strategy</h2>
           <ul class="strategy-list">
             <li class="strategy-list-li">
+              <div class="strategy-block">
+                <svg>
+                  <use
+                    class="icon-antena"
+                    width="64"
+                    height="64"
+                    href="./images/icons.svg#icon-antenna"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="sections-two-headers">Strategy</h3>
               <p class="sections-two-p">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +90,16 @@
               </p>
             </li>
             <li class="strategy-list-li">
+              <div class="strategy-block">
+                <svg>
+                  <use
+                    class="icon-antena"
+                    width="64"
+                    height="64"
+                    href="./images/icons.svg#icon-clock"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="sections-two-headers">Punctuality</h3>
               <p class="sections-two-p">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +107,16 @@
               </p>
             </li>
             <li class="strategy-list-li">
+              <div class="strategy-block">
+                <svg>
+                  <use
+                    class="icon-antena"
+                    width="64"
+                    height="64"
+                    href="./images/icons.svg#icon-diagram"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="sections-two-headers">Diligence</h3>
               <p class="sections-two-p">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +124,16 @@
               </p>
             </li>
             <li class="strategy-list-li">
+              <div class="strategy-block">
+                <svg>
+                  <use
+                    class="icon-antena"
+                    width="64"
+                    height="64"
+                    href="./images/icons.svg#icon-astronaut"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="sections-two-headers">Technologies</h3>
               <p class="sections-two-p">
                 Design practice focused on digital experiences. We bring forth a
@@ -240,15 +282,54 @@
     <!-- -- -->
     <!-- ----------- footer ---------- -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-company-logo"
-          >Web <span class="footer-company-logo-span">Studio</span></a
-        >
-        <p class="footer-p">
-          Increase the flow of customers and<br />
-          sales for your business with digital<br />
-          marketing& growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-block">
+          <a href="./index.html" class="footer-company-logo"
+            >Web <span class="footer-company-logo-span">Studio</span></a
+          >
+          <p class="footer-logo-text">
+            Increase the flow of customers and<br />
+            sales for your business with digital<br />
+            marketing& growth solutions.
+          </p>
+        </div>
+        <div class="footer-links-block">
+          <p class="footer-links-text">Social media</p>
+          <div class="media">
+            <svg>
+              <use
+                class="icon-antena"
+                width="40"
+                height="40"
+                href="./images/icons.svg#icon-instagram"
+              ></use>
+            </svg>
+            <svg>
+              <use
+                class="icon-antena"
+                width="40"
+                height="40"
+                href="./images/icons.svg#icon-facebook"
+              ></use>
+            </svg>
+            <svg>
+              <use
+                class="icon-antena"
+                width="40"
+                height="40"
+                href="./images/icons.svg#icon-instagram"
+              ></use>
+            </svg>
+            <svg>
+              <use
+                class="icon-antena"
+                width="40"
+                height="40"
+                href="./images/icons.svg#icon-instagram"
+              ></use>
+            </svg>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
