--- a/index.html
+++ b/index.html
@@ -295,40 +295,50 @@
         </div>
         <div class="footer-links-block">
           <p class="footer-links-text">Social media</p>
-          <div class="media">
-            <svg>
-              <use
-                class="icon-antena"
-                width="40"
-                height="40"
-                href="./images/icons.svg#icon-instagram"
-              ></use>
-            </svg>
-            <svg>
-              <use
-                class="icon-antena"
-                width="40"
-                height="40"
-                href="./images/icons.svg#icon-facebook"
-              ></use>
-            </svg>
-            <svg>
-              <use
-                class="icon-antena"
-                width="40"
-                height="40"
-                href="./images/icons.svg#icon-instagram"
-              ></use>
-            </svg>
-            <svg>
-              <use
-                class="icon-antena"
-                width="40"
-                height="40"
-                href="./images/icons.svg#icon-instagram"
-              ></use>
-            </svg>
-          </div>
+          <ul class="media">
+            <li class="media-list">
+              <a href="#" class="media-item">
+                <svg class="media-svg">
+                  <use
+                    class="icon-antena"
+                    width="24"
+                    height="24"
+                    href="./images/icons.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-list">
+              <a href="#" class="media-item">
+                <svg class="media-svg">
+                  <use
+                    class="icon-antena"
+                    href="./images/icons.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-list">
+              <a href="#" class="media-item">
+                <svg class="media-svg">
+                  <use
+                    class="icon-antena"
+                    href="./images/icons.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-list">
+              <a href="#" class="media-item">
+                <svg class="media-svg">
+                  <use
+                    class="icon-antena"
+                    href="./images/icons.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
