--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
                 <svg class="media-svg">
                   <use
                     class="icon-antena"
+                    width="24"
+                    height="24"
                     href="./images/icons.svg#icon-twitter"
                   ></use>
                 </svg>
@@ -323,6 +325,8 @@
                 <svg class="media-svg">
                   <use
                     class="icon-antena"
+                    width="24"
+                    height="24"
                     href="./images/icons.svg#icon-facebook"
                   ></use>
                 </svg>
@@ -333,6 +337,8 @@
                 <svg class="media-svg">
                   <use
                     class="icon-antena"
+                    width="24"
+                    height="24"
                     href="./images/icons.svg#icon-linkedin"
                   ></use>
                 </svg>
