--- a/index.html
+++ b/index.html
@@ -157,6 +157,36 @@
               <div class="team-list-item">
                 <h3 class="team-list-header">Mark Guerrero</h3>
                 <p class="team-list-p">Product Designer</p>
+                <ul class="team-media">
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-li">
@@ -169,6 +199,36 @@
               <div class="team-list-item">
                 <h3 class="team-list-header">Tom Ford</h3>
                 <p class="team-list-p">Frontend Developer</p>
+                <ul class="team-media">
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-li">
@@ -181,6 +241,36 @@
               <div class="team-list-item">
                 <h3 class="team-list-header">Camila Garcia</h3>
                 <p class="team-list-p">Marketing</p>
+                <ul class="team-media">
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-li">
@@ -193,6 +283,37 @@
               <div class="team-list-item">
                 <h3 class="team-list-header">Daniel Wilson</h3>
                 <p class="team-list-p">UI Designer</p>
+
+                <ul class="team-media">
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-media-list">
+                    <a href="#" class="team-media-item">
+                      <svg width="24" height="24" class="team-media-svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -298,49 +419,29 @@
           <ul class="media">
             <li class="media-list">
               <a href="#" class="media-item">
-                <svg class="media-svg">
-                  <use
-                    class="icon-antena"
-                    width="24"
-                    height="24"
-                    href="./images/icons.svg#icon-instagram"
-                  ></use>
+                <svg width="24" height="24" class="media-svg">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="media-list">
               <a href="#" class="media-item">
-                <svg class="media-svg">
-                  <use
-                    class="icon-antena"
-                    width="24"
-                    height="24"
-                    href="./images/icons.svg#icon-twitter"
-                  ></use>
+                <svg width="24" height="24" class="media-svg">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="media-list">
               <a href="#" class="media-item">
-                <svg class="media-svg">
-                  <use
-                    class="icon-antena"
-                    width="24"
-                    height="24"
-                    href="./images/icons.svg#icon-facebook"
-                  ></use>
+                <svg width="24" height="24" class="media-svg">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="media-list">
               <a href="#" class="media-item">
-                <svg class="media-svg">
-                  <use
-                    class="icon-antena"
-                    width="24"
-                    height="24"
-                    href="./images/icons.svg#icon-linkedin"
-                  ></use>
+                <svg width="24" height="24" class="media-svg">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
