--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
           <button type="button" class="button-order">Order Service</button>
         </div>
       </section>
+
+      <!-- ---sec2--- -->
       <section class="section section-two">
         <div class="container">
           <h2 class="visually-hidden">Global Strategy</h2>
           <ul class="strategy-list">
             <li class="strategy-list-li">
               <div class="strategy-block">
-                <svg>
+                <svg width="64" height="64">
                   <use
                     class="icon-antena"
-                    width="64"
-                    height="64"
                     href="./images/icons.svg#icon-antenna"
                   ></use>
                 </svg>
@@ -91,11 +91,9 @@
             </li>
             <li class="strategy-list-li">
               <div class="strategy-block">
-                <svg>
+                <svg width="64" height="64">
                   <use
                     class="icon-antena"
-                    width="64"
-                    height="64"
                     href="./images/icons.svg#icon-clock"
                   ></use>
                 </svg>
@@ -108,11 +106,9 @@
             </li>
             <li class="strategy-list-li">
               <div class="strategy-block">
-                <svg>
+                <svg width="64" height="64">
                   <use
                     class="icon-antena"
-                    width="64"
-                    height="64"
                     href="./images/icons.svg#icon-diagram"
                   ></use>
                 </svg>
@@ -125,11 +121,9 @@
             </li>
             <li class="strategy-list-li">
               <div class="strategy-block">
-                <svg>
+                <svg width="64" height="64">
                   <use
                     class="icon-antena"
-                    width="64"
-                    height="64"
                     href="./images/icons.svg#icon-astronaut"
                   ></use>
                 </svg>
