--- a/index.html
+++ b/index.html
@@ -278,7 +278,6 @@
               <div class="team-list-item">
                 <h3 class="team-list-header">Daniel Wilson</h3>
                 <p class="team-list-p">UI Designer</p>
-
                 <ul class="team-media">
                   <li class="team-media-list">
                     <a href="#" class="team-media-item">
@@ -314,6 +313,7 @@
           </ul>
         </div>
       </section>
+
       <section class="section section-four">
         <div class="container">
           <h2 class="section-four-header">Our Portfolio</h2>
@@ -325,6 +325,13 @@
                 height="300"
                 alt="App"
               />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-list-header">Banking App</h3>
                 <p class="portfolio-list-p">App</p>
@@ -337,6 +344,13 @@
                 height="300"
                 alt="Marketing"
               />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-list-header">Cashless Payment</h3>
                 <p class="portfolio-list-p">Marketing</p>
@@ -349,6 +363,13 @@
                 height="300"
                 alt="App"
               />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-list-header">Meditation App</h3>
                 <p class="portfolio-list-p">App</p>
@@ -361,6 +382,13 @@
                 height="300"
                 alt="Marketing"
               />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-list-header">Taxi Service</h3>
                 <p class="portfolio-list-p">Marketing</p>
@@ -373,6 +401,13 @@
                 height="300"
                 alt="Design"
               />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-list-header">Screen Illustrations</h3>
                 <p class="portfolio-list-p">Design</p>
@@ -385,6 +420,13 @@
                 height="300"
                 alt="Marketing"
               />
+              <div class="overlay">
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-item">
                 <h3 class="portfolio-list-header">Online Courses</h3>
                 <p class="portfolio-list-p">Marketing</p>
