--- a/index.html
+++ b/index.html
@@ -313,20 +313,19 @@
           </ul>
         </div>
       </section>
-
       <section class="section section-four">
         <div class="container">
           <h2 class="section-four-header">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-li">
-              <img
-                src="./images/sec2_img1.jpg"
-                width="360"
-                height="300"
-                alt="App"
-              />
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="portfolio-list-form">
+                <img
+                  src="./images/sec2_img1.jpg"
+                  width="360"
+                  height="300"
+                  alt="App"
+                />
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -338,14 +337,14 @@
               </div>
             </li>
             <li class="portfolio-list-li">
-              <img
-                src="./images/sec2_img2.jpg"
-                width="360"
-                height="300"
-                alt="Marketing"
-              />
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="portfolio-list-form">
+                <img
+                  src="./images/sec2_img2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Marketing"
+                />
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -357,14 +356,14 @@
               </div>
             </li>
             <li class="portfolio-list-li">
-              <img
-                src="./images/sec2_img3.jpg"
-                width="360"
-                height="300"
-                alt="App"
-              />
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="portfolio-list-form">
+                <img
+                  src="./images/sec2_img3.jpg"
+                  width="360"
+                  height="300"
+                  alt="App"
+                />
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -376,14 +375,15 @@
               </div>
             </li>
             <li class="portfolio-list-li">
-              <img
-                src="./images/sec2_img4.jpg"
-                width="360"
-                height="300"
-                alt="Marketing"
-              />
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="portfolio-list-form">
+                <img
+                  src="./images/sec2_img4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Marketing"
+                />
+
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -395,14 +395,15 @@
               </div>
             </li>
             <li class="portfolio-list-li">
-              <img
-                src="./images/sec2_img5.jpg"
-                width="360"
-                height="300"
-                alt="Design"
-              />
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="portfolio-list-form">
+                <img
+                  src="./images/sec2_img5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Design"
+                />
+
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -414,14 +415,15 @@
               </div>
             </li>
             <li class="portfolio-list-li">
-              <img
-                src="./images/sec2_img6.jpg"
-                width="360"
-                height="300"
-                alt="Marketing"
-              />
-              <div class="overlay">
-                <p class="overlay-text">
+              <div class="portfolio-list-form">
+                <img
+                  src="./images/sec2_img6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Marketing"
+                />
+
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
