--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
         </div>
       </section>
       <section class="section section-three">
-        <div class="container">
+        <div class="container container-three">
           <h2 class="section-three-header">Our Team</h2>
-
           <ul class="team-list">
             <li class="team-list-li">
               <img
