--- a/index.html
+++ b/index.html
@@ -151,36 +151,38 @@
               <div class="team-list-item">
                 <h3 class="team-list-header">Mark Guerrero</h3>
                 <p class="team-list-p">Product Designer</p>
-                <ul class="team-media">
-                  <li class="team-media-list">
-                    <a href="#" class="team-media-item">
-                      <svg width="16" height="16" class="team-media-svg">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-media-list">
-                    <a href="#" class="team-media-item">
-                      <svg width="16" height="16" class="team-media-svg">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-media-list">
-                    <a href="#" class="team-media-item">
-                      <svg width="16" height="16" class="team-media-svg">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-media-list">
-                    <a href="#" class="team-media-item">
-                      <svg width="16" height="16" class="team-media-svg">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <div class="team-media-group">
+                  <ul class="team-media">
+                    <li class="team-media-list">
+                      <a href="#" class="team-media-item">
+                        <svg width="16" height="16" class="team-media-svg">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-media-list">
+                      <a href="#" class="team-media-item">
+                        <svg width="16" height="16" class="team-media-svg">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-media-list">
+                      <a href="#" class="team-media-item">
+                        <svg width="16" height="16" class="team-media-svg">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-media-list">
+                      <a href="#" class="team-media-item">
+                        <svg width="16" height="16" class="team-media-svg">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-li">
